[package]
name = "tunnel-manager"
version = "0.1.0"
edition = "2024"
build = "build.rs"
publish = false

[dependencies]
aws-config = { version= "1.8.0", features = ["behavior-version-latest"] }
aws-sdk-iotsecuretunneling = "1.74.0"
freya = "0.3.4"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

[dev-dependencies]
mockall = "0.12"
tokio-test = "0.4"
aws-smithy-runtime-api = "1.0"
aws-smithy-types = "1.0"

[build-dependencies]
winresource = "0.1"

[package.metadata.packager]
before-packaging-command = "cargo build --release"
product-name = "Gardin Tunnel Manager"
identifier = "uk.co.gardin.tunnel"
icons = [
  "icon.png",
  "icon.ico"
]

[package.metadata.winresource]
ProductName = "Gardin Tunnel Manager"